--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,18 +17,8 @@ jobs:
         with:
           node-version: '18.x'  
 
-      - name: Install backend dependencies
-        working-directory: ./backend
+      - name: Install dependencies
         run: npm install
 
-      - name: Install frontend dependencies
-        working-directory: ./frontend
-        run: npm install
-
-      - name: Lint backend
-        working-directory: ./backend
-        run: npm run lint
-
-      - name: Lint frontend
-        working-directory: ./frontend
+      - name: Lint
         run: npm run lint
